--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="face_size">69dp</dimen>
     <dimen name="level_size">30dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
 </resources>
