--- a/app/src/main/res/layout/activity_photo_view.xml
+++ b/app/src/main/res/layout/activity_photo_view.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.widget.PhotoViewActivity"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    tools:context=".ui.PhotoViewActivity">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/pv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <ImageButton
+        android:id="@+id/ib_pip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorTransparency"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp"
+        android:src="@drawable/ic_branding_watermark" />
+
+</RelativeLayout>
