--- a/app/src/main/res/menu/settings_main.xml
+++ b/app/src/main/res/menu/settings_main.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="none" >
+        <item android:id="@+id/layout"
+            android:title="@string/layout"/>
         <item android:id="@+id/develop"
             android:title="@string/develop"
             android:icon="@drawable/ic_code"/>
