--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="face_size">69dp</dimen>
+    <dimen name="face_size_small">50dp</dimen>
     <dimen name="level_size">30dp</dimen>
     <dimen name="divider_height">1dp</dimen>
 </resources>
