--- a/app/src/main/res/layout/layout_dynamic_card_item.xml
+++ b/app/src/main/res/layout/layout_dynamic_card_item.xml
@@ -37,14 +37,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cli_face"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/black"
+            android:textIsSelectable="true" />
 
-        <ImageView
-            android:id="@+id/iv_photo_1"
+        <LinearLayout
+            android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_content"
-            android:layout_marginTop="10dp" />
+            android:orientation="vertical" />
     </RelativeLayout>
 
 
