--- a/app/src/main/res/layout/layout_video_card_item.xml
+++ b/app/src/main/res/layout/layout_video_card_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?selectableItemBackground"
+    android:longClickable="true"
     app:cardCornerRadius="1dp">
 
     <RelativeLayout
@@ -23,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/iv"
-            android:layout_marginTop="5dp"
             android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
             android:textColor="@android:color/black"
             android:textSize="15sp" />
 
