--- a/app/src/main/res/layout/activity_user_space.xml
+++ b/app/src/main/res/layout/activity_user_space.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.userSpace.UserSpaceActivity">
+    tools:context=".ui.userspace.UserSpaceActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -153,6 +153,6 @@
         android:id="@+id/vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.userSpace.UserSpaceActivity" />
+        tools:context=".ui.userspace.UserSpaceActivity" />
 
 </LinearLayout>
