--- a/app/src/main/res/layout/layout_favorite_card_item.xml
+++ b/app/src/main/res/layout/layout_favorite_card_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:foreground="?selectableItemBackground"
     android:orientation="vertical"
     android:padding="10dp"
     app:cardCornerRadius="1dp">
@@ -20,19 +22,20 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/iv"
-            android:paddingRight="5dp"
-            android:textSize="15sp"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
+
         <TextView
+            android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_count"
             android:layout_alignBottom="@id/iv"
-            android:layout_toEndOf="@id/iv"
             android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/iv" />
     </RelativeLayout>
 
 
