--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        layout="@layout/drawer_main"
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_main"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:theme="@style/AppTheme.Navigation"
+        app:headerLayout="@layout/drawer_main_header"
+        app:menu="@menu/main" />
 
     <View
         android:layout_width="1dp"
