--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:scaleType="fitCenter" />
 
     <TextView
