使用Android提供的方法修复之前修复的bug

--- a/app/src/main/res/menu/settings_main.xml
+++ b/app/src/main/res/menu/settings_main.xml
@@ -18,8 +18,9 @@
             android:icon="@drawable/ic_code"
             android:title="@string/develop" />
         <item
-            android:id="@+id/license"
-            android:title="@string/license" />
+            android:id="@+id/about"
+            android:icon="@drawable/ic_info"
+            android:title="@string/about" />
     </group>
 
 </menu>
